# conll2018_editorial_effect

./: .gitignore  README.md  pyproject.toml
data/: conll2018.sql  explanations_challenging.txt  explanations_noeffect.txt  upwork_tests.txt
data/annotation_guidelines/: annotation.html  footer.html  header.html  index.html  intro.html
data/annotations/: Readme.txt  annotations_latest.csv  conll2018_data.json  data.json  personality_traits.csv
data/batch1/: data_batch1.md
data/batch2/: data_batch2.md
data/batch3/: data_batch3.md
data/batch4/: data_batch4.md
data/batch5/: data_batch5.md
data/explanations_per_label/: explanations_reinforcing.txt
data/pilot_study/: data.md  pilot-instructions.txt  pilot_study.csv  questions-editorials-test.txt
experiments/: main.py
src/conll2018_editorial_effect/: config.py
src/conll2018_editorial_effect/analysis/: agreement.py  correlation.py  quality.py  statistics.py
src/conll2018_editorial_effect/data/: batch.py  loader.py  preprocessing.py
src/conll2018_editorial_effect/utils/: files.py
